# CPPTD

./: CMakeLists.txt  debug.sh  main.cpp  test2.cpp
core/: _test.hpp  assertions.hpp  bits.hpp  container_pool.hpp  container_vector.hpp  core.hpp  heaps.hpp  macros.hpp  memory.hpp  memory_unsafe.hpp  numerics.hpp  types.hpp  typing.hpp
math/: _test.hpp  fixed.hpp  fixed_trig.hpp
